# fina_question_lib

./: pyproject.toml
src/fina_question_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/question_lib/: __init__.py  advanced_formulas.py  decomposer.py  dependency_graph.py  formula_matcher.py  intent_classifier.py  models.py  modifier_extractor.py  operation_detector.py  period_extractor.py  plan_executor.py  registry.py  subject_extractor.py  table_normalizer.py
